fix: toast z-index

--- a/src/components/Toasts/Toasts.css
+++ b/src/components/Toasts/Toasts.css
@@ -1,5 +1,6 @@
 .dcl.toasts {
   position: fixed;
+  z-index: 3001; /* Appear over modals */
 }
 
 .dcl.toasts.top {
